[package]
name = "rs-blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base58 = "0.2.0"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
hex = "0.4.3"
log = "0.4.27"
p256 = "0.13.2"
ripemd = "0.1.3"
rs_merkle = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
sled = "0.34.7"
